# Edge-Quest

./: CMakeLists.txt  Edge-Quest.cpp  README.md  index.html
scripts/: build.sh
src/: Edge-Quest.cpp  Edge-Quest.h  main.cpp
web/: edge-quest.js  edge-quest.wasm  game.js  index.html  style.css
